FPSM native library support added, works only on jdk >= 19